--- a/gae/main.html
+++ b/gae/main.html
@@ -15,6 +15,8 @@
                     success: function(obj, status) {
                         $("#recipe").append("<h2>" + obj.title + "</h2>");
 
+                        $("#recipe").append('<img src="' + obj.image + '"/>');
+
                         var ingredients = "<h3>Ingredients</h3>";
                         ingredients += "<ul>";
                         obj.ingredients.forEach(function(i) {
