Fix bad reference to 'title' field in Recipe JSON.

--- a/gae/main.html
+++ b/gae/main.html
@@ -18,7 +18,7 @@
                     success: function(obj, status) {
                         recipe = obj;
 
-                        $("#recipe").append("<h2>" + obj.title + "</h2>");
+                        $("#recipe").append("<h2>" + obj.name + "</h2>");
 
                         $("#recipe").append('<img src="' + obj.image + '"/>');
 
