--- a/gae/list.html
+++ b/gae/list.html
@@ -6,13 +6,10 @@
 
     <title>Recipes</title>
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-    </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="less/bootstrap.less" rel="stylesheet/less">
+    <link href="less/homnivore.less" rel="stylesheet/less">
+    <link href="less/responsive.less" rel="stylesheet/less">
+    <script src="js/less-1.3.0.min.js"></script>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -21,6 +18,26 @@
 </head>
 
 <body>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="#">Project name</a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                   </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         {% for r in recipes %}
             {% if (loop.index0 % 3) == 0 %}
