Click on items in list view to render whole recipe

--- a/gae/clip.html
+++ b/gae/clip.html
@@ -15,23 +15,7 @@
 </head>
 
 <body>
-    <img src="{{ recipe['image'] }}"/>
-    <h2>{{ recipe.name }}</h2>
-
-    <h3>Ingredients</h3>
-    <ul>
-        {% for i in recipe.ingredients %}
-            <li>{{ i }}</li>
-        {% endfor %}
-    </ul>
-
-    <h3>Preparation</h3>
-    <ol>
-        {% for s in recipe.steps %}
-            <li>{{ s }}</li>
-        {% endfor %}
-    </ol>
-
+    {% include "recipe.html" %}
     <button onclick="javascript: clipRecipe();">Clip</button>
 </body>
 </html>
