Styling of recipe view for print/screen.

--- a/gae/clip.html
+++ b/gae/clip.html
@@ -2,6 +2,8 @@
 <head>
     <title>{{ recipe.name }}</title>
 
+    <link href="less/homnivore.less" rel="stylesheet" type="text/less">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
     <script>
