--- a/gae/view.html
+++ b/gae/view.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>{{ recipe.name }}</title>
+
+    <link href="less/homnivore.less" rel="stylesheet" type="text/less">
 </head>
 
 <body>
