Lots of updates.
- Create fragment templates to be used in all pages including header,
  footer, etc. Add these to all pages.
- Get rid of login requirement for all pages in app.yaml; replace with
  decorator and make / bi-modal (302s to /list if logged-in)
- Make LESS stylesheets media="all" so that we get them even when being
  printed

--- a/gae/clip.html
+++ b/gae/clip.html
@@ -2,12 +2,9 @@
 <head>
     <title>{{ recipe.name }}</title>
 
-    <link href="less/homnivore.less" rel="stylesheet" type="text/less">
+    {% include "head.html" %}
 
     {% if recipe is not none %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-
         <script>
             clipRecipe = function() {
                 $.ajax("/api/add", {
@@ -26,6 +23,8 @@
 </head>
 
 <body>
+    {% include "header.html" %}
+
     {% if recipe is not none %}
         {% include "recipe.html" %}
         <button onclick="javascript: clipRecipe();">Clip</button>
@@ -33,5 +32,7 @@
         Sorry, we couldn't clip that recipe, probably because we don't
         understand how to gather content from {{ url.hostname }}
     {% endif %}
+
+    {% include "footer.html" %}
 </body>
 </html>
