--- a/gae/main.html
+++ b/gae/main.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>{{ recipe.name }}</title>
+    <title>Homnivore</title>
 
     {% include "head.html" %}
 </head>
@@ -8,7 +9,9 @@
 <body>
     {% include "header.html" %}
 
-    {% include "recipe.html" %}
+    <p>Put copy here.</p>
+
+    <p>Something about collecting recipes.</p>
 
     {% include "footer.html" %}
 </body>
