--- a/gae/recipe.html
+++ b/gae/recipe.html
@@ -1,4 +1,4 @@
-<img class="image" src="{{ recipe['image'] }}"/>
+<img class="image" src="{{ recipe.image }}"/>
 <div class="title">{{ recipe.name }}</div>
 
 <div class="heading">Ingredients</div>
